Bug Fix: adjust header/height spacing
- remove height and min-height values from header
- adjust vertical alignment of login button
- resize flash bar to a fixed pixel height
- convert flash bar padding to a margin
- remove height value from main
- give main a min-height value of calc(100vh - x) where x is the cumulative height of everything above <main>
- @ width = 686 px:
    - remove top margin from body
    - narrow the top margin of the logo
    - narrow the nav bar
    - adjust vertical alignment of nav items
    - recalculate x in main’s height
- @ width = 540 px:
    - shrink profile pic and adjust its vertical alignment
    - adjust vertical alignment of profile pic menu
    - recalculate x in main’s height
- @ width = 475 px:
    - add right padding to logo to prevent spacing issues with login
    - remove padding from top of main content
    - narrow margin of flash bar
    - remove top margin from footer unless on full article page
    - recalculate x in main’s height
- @ width = 388 px:
    - move login button to bottom of the header
    - grow profile pic and adjust the vertical alignment of its menu
    - recalculate x in main’s height

--- a/static/styles.css
+++ b/static/styles.css
@@ -19,13 +19,10 @@ body {
 
 header {
 	width: 100%;
-	height: 12%;
-	min-height: 12vh;
 }
 
 .header_inner {
 	width: 100%;
-	height: inherit;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -54,9 +51,10 @@ header {
 
 .login {
 	width: 30%;
-	padding-top: 45px;
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
+	margin-top: 5px;
 }
 
 /*  login private  */
@@ -185,17 +183,16 @@ nav {
 
 .flash {
 	width: 100%;
-	height: 5vh;
+	height: 20.25px;
 	text-align: center;
-	padding-top: 20px;
+	margin-top: 20px;
 }
 
 /*////    MAIN   /////////////////////*/
 
 main {
 	width: 100%;
-	height: 78%;
-	min-height: 78vh;
+	min-height: calc(100vh - 199.25px);
 }
 
 /*  author header  */
@@ -629,9 +626,15 @@ footer h4 {
 }
 
 @media screen and (max-width: 686px) {
+	body {
+		margin-top: 0px;
+	}
 	.logo {
 		font-size: 35pt;
 		align-self: flex-end;
+	}
+	.logo h1 {
+		margin-top: 5px;
 	}
 	.profile_pic {
 		height: 3em;
@@ -640,11 +643,14 @@ footer h4 {
 		align-self: flex-end;
 		margin-bottom: 10px;
 	}
+	nav {
+		height: 30px;
+	}
 	.nav_item {
 		font-size: 15px;
 	}
 	.nav_item h3 {
-		margin-top: 8px;
+		margin-top: 4px;
 	}
 	#short_input {
 		width: 100%;
@@ -664,6 +670,9 @@ footer h4 {
 	}
 	.dropdown_menu a {
 		font-size: 10px;
+	}
+	main {
+		min-height: calc(100vh - 158.25px);
 	}
 }
 
@@ -688,9 +697,23 @@ footer h4 {
 	.logo {
 		font-size: 25pt;
 	}
+	.profile_pic {
+		height: 2.1em;
+		width: 2.1em;
+		margin-bottom: 8px;
+	}
+	.dropdown_menu {
+		margin-bottom: 7px;
+	}
+	main {
+		min-height: calc(100vh - 140.25px);
+	}
 }
 
 @media screen and (max-width: 475px) {
+	.logo h1 {
+		padding-right: 10px;
+	}
 	main article {
 		width: 100%;
 		margin-bottom: 0px;
@@ -698,6 +721,9 @@ footer h4 {
 	main {
 		padding-left: 0px;
 		padding-right: 0px;
+	}
+	#category_menu_content {
+		padding-top: 0px;
 	}
 	#full_article_content {
 		width: 100%;
@@ -722,8 +748,7 @@ footer h4 {
 		margin-bottom: 5px;
 	}
 	.flash {
-		padding-top: 5px;
-		height: 3vh;
+		margin-top: 5px;
 		font-size: 14px;
 	}
 	#button_inputs {
@@ -734,5 +759,32 @@ footer h4 {
 	.header_inner {
 		padding-right: 5px;
 		padding-left: 5px;
+	}
+	footer {
+		margin-top: 0px;
+	}
+	#article_footer {
+		margin-top: 20px;
+	}
+	main {
+		min-height: calc(100vh - 105.25px);
+	}
+}
+
+@media screen and (max-width: 388px) {
+	.login {
+		align-items: flex-end;
+		padding-bottom: 3px;
+	}
+	.profile_pic {
+		height: 3em;
+		width: 3em;
+		margin-bottom: 5px;
+	}
+	.dropdown_menu {
+		margin-bottom: 10px;
+	}
+	main {
+		min-height: calc(100vh - 150.25px);
 	}
 }
